Fixes overflow error

--- a/css/style.dev.css
+++ b/css/style.dev.css
@@ -322,7 +322,6 @@ body {
   float       : left;
   width       : 61.8%;
   padding-top : 1.5em;
-  overflow    : hidden;
 }
 #contenu > div {
   margin: 0 1.5em;
